hydroflow/tests/compile-fail/surface_lattice_merge_badgeneric.stderr
error[E0277]: the trait bound `usize: Merge<usize>` is not satisfied
 --> tests/compile-fail/surface_lattice_merge_badgeneric.rs:6:41
  |
6 |             -> lattice_merge::<'static, usize>()
  |                                         ^^^^^ the trait `Merge<usize>` is not implemented for `usize`
  |
  = help: the following other types implement trait `Merge<Other>`:
            <WithBot<Inner> as Merge<WithBot<Other>>>
            <DomPair<KeySelf, ValSelf> as Merge<DomPair<KeyOther, ValOther>>>
            <MapUnion<MapSelf> as Merge<MapUnion<MapOther>>>
            <Max<T> as Merge<Max<T>>>
            <Min<T> as Merge<Min<T>>>
            <Pair<LatASelf, LatBSelf> as Merge<Pair<LatAOther, LatBOther>>>
            <Point<T> as Merge<Point<O>>>
            <SetUnion<SetSelf> as Merge<SetUnion<SetOther>>>
          and $N others
note: required by a bound in `check_inputs`
 --> tests/compile-fail/surface_lattice_merge_badgeneric.rs:4:18
  |
4 |       let mut df = hydroflow_syntax! {
  |  __________________^
5 | |         source_iter([1,2,3,4,5])
6 | |             -> lattice_merge::<'static, usize>()
7 | |             -> for_each(|x| println!("Least upper bound: {:?}", x));
8 | |     };
  | |_____^ required by this bound in `check_inputs`
  = note: this error originates in the macro `hydroflow_syntax` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `usize: Merge<usize>` is not satisfied
 --> tests/compile-fail/surface_lattice_merge_badgeneric.rs:5:9
  |
5 | /         source_iter([1,2,3,4,5])
6 | |             -> lattice_merge::<'static, usize>()
  | |________________________________________________^ the trait `Merge<usize>` is not implemented for `usize`
  |
  = help: the following other types implement trait `Merge<Other>`:
            <WithBot<Inner> as Merge<WithBot<Other>>>
            <DomPair<KeySelf, ValSelf> as Merge<DomPair<KeyOther, ValOther>>>
            <MapUnion<MapSelf> as Merge<MapUnion<MapOther>>>
            <Max<T> as Merge<Max<T>>>
            <Min<T> as Merge<Min<T>>>
            <Pair<LatASelf, LatBSelf> as Merge<Pair<LatAOther, LatBOther>>>
            <Point<T> as Merge<Point<O>>>
            <SetUnion<SetSelf> as Merge<SetUnion<SetOther>>>
          and $N others

error[E0277]: the trait bound `usize: Merge<usize>` is not satisfied
 --> tests/compile-fail/surface_lattice_merge_badgeneric.rs:4:18
  |
4 |       let mut df = hydroflow_syntax! {
  |  __________________^
5 | |         source_iter([1,2,3,4,5])
6 | |             -> lattice_merge::<'static, usize>()
7 | |             -> for_each(|x| println!("Least upper bound: {:?}", x));
8 | |     };
  | |_____^ the trait `Merge<usize>` is not implemented for `usize`
  |
  = help: the following other types implement trait `Merge<Other>`:
            <WithBot<Inner> as Merge<WithBot<Other>>>
            <DomPair<KeySelf, ValSelf> as Merge<DomPair<KeyOther, ValOther>>>
            <MapUnion<MapSelf> as Merge<MapUnion<MapOther>>>
            <Max<T> as Merge<Max<T>>>
            <Min<T> as Merge<Min<T>>>
            <Pair<LatASelf, LatBSelf> as Merge<Pair<LatAOther, LatBOther>>>
            <Point<T> as Merge<Point<O>>>
            <SetUnion<SetSelf> as Merge<SetUnion<SetOther>>>
          and $N others
  = note: this error originates in the macro `hydroflow_syntax` (in Nightly builds, run with -Z macro-backtrace for more info)
